[gd_scene load_steps=8 format=3 uid="uid://byi3sqf6mspw5"]

[ext_resource type="Texture2D" uid="uid://22g1igcwut1r" path="res://assets/cards/Atop_The_Mountain.png" id="1_p7bbr"]
[ext_resource type="Script" uid="uid://e41fsn3psbeg" path="res://script/enemy_card.gd" id="1_vemmd"]

[sub_resource type="BoxMesh" id="BoxMesh_vemmd"]
size = Vector3(1, 1.5, 0.001)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b2gbo"]
resource_local_to_scene = true
albedo_texture = ExtResource("1_p7bbr")
uv1_scale = Vector3(1, 0.67, 1)
uv1_offset = Vector3(0.5, 0.5, 0)
uv1_triplanar = true
texture_filter = 0

[sub_resource type="Animation" id="Animation_b2gbo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("card_mesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_vemmd"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("card_mesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.901, 0.124), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3vgww"]
_data = {
&"RESET": SubResource("Animation_b2gbo"),
&"attack": SubResource("Animation_vemmd")
}

[node name="enemy_card" type="Node3D"]
script = ExtResource("1_vemmd")

[node name="card_mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_vemmd")
surface_material_override/0 = SubResource("StandardMaterial3D_b2gbo")

[node name="name" type="Label3D" parent="card_mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.43683, 0.694851, 0.002)
pixel_size = 0.0032
shaded = true
font_size = 20
outline_size = 4
horizontal_alignment = 0
line_spacing = -15.0
autowrap_mode = 2
width = 270.0

[node name="health_and_damage" type="Label3D" parent="card_mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.414265, -0.12667, 0.00164795)
pixel_size = 0.0032
shaded = true
outline_size = 4
horizontal_alignment = 0

[node name="cost" type="Label3D" parent="card_mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.409769, -0.181091, 0.002)
pixel_size = 0.0032
shaded = true
font_size = 20
outline_size = 4
horizontal_alignment = 0
vertical_alignment = 0

[node name="ability_and_description" type="Label3D" parent="card_mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.41, -0.266, 0.002)
pixel_size = 0.0032
shaded = true
font_size = 20
outline_size = 4
horizontal_alignment = 0
vertical_alignment = 0
autowrap_mode = 2
width = 260.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3vgww")
}
speed_scale = 2.0
